fixed toggel button position on tablets

--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -65,6 +65,7 @@
     display: none;
     @include tablet{
       display: block;
+      top: 60px;
     }
     @include mobile{
       display: block;
